Improve design
Now uses JFoenix

Fixes #880
Fixes #751
Fixes #754