@@ -17,6 +17,7 @@ import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
 import javafx.scene.image.Image;
 import javafx.scene.web.WebView;
+import lombok.SneakyThrows;
 import org.apache.commons.compress.utils.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -118,21 +119,27 @@ public class UiServiceImpl implements UiService {
   }
 
   @PostConstruct
-  void postConstruct() throws IOException, InterruptedException {
+  void postConstruct() throws IOException {
     resources = new MessageSourceResourceBundle(messageSource, i18n.getUserSpecificLocale());
     Path themesDirectory = preferencesService.getThemesDirectory();
     startWatchService(themesDirectory);
-    Path cacheStylesheetsDirectory = preferencesService.getCacheStylesheetsDirectory();
-    if (Files.exists(cacheStylesheetsDirectory)) {
-      deleteRecursively(cacheStylesheetsDirectory);
-    }
+    deleteStylesheetsCacheDirectory();
     loadThemes();
 
     String storedTheme = preferencesService.getPreferences().getThemeName();
     setTheme(themesByFolderName.get(storedTheme));
+
+    loadWebViewsStyleSheet(getWebViewStyleSheet());
   }
 
-  private void startWatchService(Path themesDirectory) throws IOException, InterruptedException {
+  private void deleteStylesheetsCacheDirectory() throws IOException {
+    Path cacheStylesheetsDirectory = preferencesService.getCacheStylesheetsDirectory();
+    if (Files.exists(cacheStylesheetsDirectory)) {
+      deleteRecursively(cacheStylesheetsDirectory);
+    }
+  }
+
+  private void startWatchService(Path themesDirectory) throws IOException {
     watchService = themesDirectory.getFileSystem().newWatchService();
     threadPoolExecutor.execute(() -> {
       try {
@@ -143,8 +150,6 @@ public class UiServiceImpl implements UiService {
         }
       } catch (InterruptedException | ClosedWatchServiceException e) {
         logger.debug("Watcher service terminated");
-      } catch (IOException e) {
-        logger.warn("Exception while watching directories", e);
       }
     });
   }
@@ -172,10 +177,7 @@ public class UiServiceImpl implements UiService {
   @PreDestroy
   void preDestroy() throws IOException {
     IOUtils.closeQuietly(watchService);
-    Path cacheStylesheetsDirectory = preferencesService.getCacheStylesheetsDirectory();
-    if (Files.exists(cacheStylesheetsDirectory)) {
-      deleteRecursively(cacheStylesheetsDirectory);
-    }
+    deleteStylesheetsCacheDirectory();
   }
 
   private void stopWatchingTheme(Theme theme) {
@@ -194,7 +196,7 @@ public class UiServiceImpl implements UiService {
     noCatch(() -> Files.walkFileTree(themePath, new DirectoryVisitor(path -> watchDirectory(themePath, watchService))));
   }
 
-  private void onWatchEvent(WatchKey key) throws IOException {
+  private void onWatchEvent(WatchKey key) {
     for (WatchEvent<?> watchEvent : key.pollEvents()) {
       Path path = (Path) watchEvent.context();
       if (watchEvent.kind() == ENTRY_CREATE && Files.isDirectory(path)) {
@@ -216,15 +218,15 @@ public class UiServiceImpl implements UiService {
   }
 
   private void reloadStylesheet() {
-    String styleSheet = getSceneStyleSheet();
+    String[] styleSheets = getStylesheets();
 
-    logger.debug("Changes detected, reloading stylesheet: {}", styleSheet);
-    scenes.forEach(scene -> setSceneStyleSheet(scene, styleSheet));
-    setAndCreateWebViewsStyleSheet(getWebViewStyleSheet());
+    logger.debug("Changes detected, reloading stylesheets: {}", (Object[]) styleSheets);
+    scenes.forEach(scene -> setSceneStyleSheet(scene, styleSheets));
+    loadWebViewsStyleSheet(getWebViewStyleSheet());
   }
 
-  private void setSceneStyleSheet(Scene scene, String styleSheet) {
-    Platform.runLater(() -> scene.getStylesheets().setAll(styleSheet));
+  private void setSceneStyleSheet(Scene scene, String[] styleSheets) {
+    Platform.runLater(() -> scene.getStylesheets().setAll(styleSheets));
   }
 
   private String getSceneStyleSheet() {
@@ -295,17 +297,18 @@ public class UiServiceImpl implements UiService {
 
   @Override
   public String[] getStylesheets() {
-    return new String[]{getSceneStyleSheet(), getThemeFile("theme/material-colors.css")};
+    return new String[]{
+        UiServiceImpl.class.getResource("/css/jfoenix-fonts.css").toExternalForm(),
+        UiServiceImpl.class.getResource("/css/jfoenix-design.css").toExternalForm(),
+        getThemeFile("theme/jfoenix.css"),
+        getSceneStyleSheet()
+    };
   }
 
   @Override
   public void registerWebView(WebView webView) {
     webViews.add(webView);
-    if (currentTempStyleSheet == null) {
-      setAndCreateWebViewsStyleSheet(getWebViewStyleSheet());
-    } else {
-      Platform.runLater(() -> webView.getEngine().setUserStyleSheetLocation(getWebViewStyleSheet()));
-    }
+    webView.getEngine().setUserStyleSheetLocation(getWebViewStyleSheet());
   }
 
   @Override
@@ -348,25 +351,25 @@ public class UiServiceImpl implements UiService {
     return getThemeFileUrl(WEBVIEW_CSS_FILE).toString();
   }
 
-  private void setAndCreateWebViewsStyleSheet(String styleSheetUrl) {
+  @SneakyThrows
+  private void loadWebViewsStyleSheet(String styleSheetUrl) {
     // Always copy to a new file since WebView locks the loaded one
     Path stylesheetsCacheDirectory = preferencesService.getCacheStylesheetsDirectory();
 
-    noCatch(() -> {
-      Files.createDirectories(stylesheetsCacheDirectory);
+    Files.createDirectories(stylesheetsCacheDirectory);
 
-      Path newTempStyleSheet = Files.createTempFile(stylesheetsCacheDirectory, "style-webview", ".css");
+    Path newTempStyleSheet = Files.createTempFile(stylesheetsCacheDirectory, "style-webview", ".css");
 
-      try (InputStream inputStream = new URL(styleSheetUrl).openStream()) {
-        Files.copy(inputStream, newTempStyleSheet, StandardCopyOption.REPLACE_EXISTING);
-      }
-      String newStyleSheetUrl = newTempStyleSheet.toUri().toURL().toString();
-      webViews.forEach(webView -> Platform.runLater(() -> webView.getEngine().setUserStyleSheetLocation(newStyleSheetUrl)));
-      logger.debug("{} created and applied to all web views", newTempStyleSheet.getFileName());
-      if (currentTempStyleSheet != null) {
-        Files.delete(currentTempStyleSheet);
-      }
-      currentTempStyleSheet = newTempStyleSheet;
-    });
+    try (InputStream inputStream = new URL(styleSheetUrl).openStream()) {
+      Files.copy(inputStream, newTempStyleSheet, StandardCopyOption.REPLACE_EXISTING);
+    }
+    if (currentTempStyleSheet != null) {
+      Files.delete(currentTempStyleSheet);
+    }
+    currentTempStyleSheet = newTempStyleSheet;
+    webViews.forEach(webView -> Platform.runLater(() -> {
+      webView.getEngine().setUserStyleSheetLocation(noCatch(() -> currentTempStyleSheet.toUri().toURL()).toString());
+    }));
+    logger.debug("{} created and applied to all web views", newTempStyleSheet.getFileName());
   }
 }
